--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/WebXR Export.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebXR Export.data.gz",
-        frameworkUrl: buildUrl + "/WebXR Export.framework.js.gz",
-        codeUrl: buildUrl + "/WebXR Export.wasm.gz",
+        dataUrl: buildUrl + "/WebXR Export.data.br",
+        frameworkUrl: buildUrl + "/WebXR Export.framework.js.br",
+        codeUrl: buildUrl + "/WebXR Export.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "WebAR-Theatre",
